[package]
name = "cas3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
aws-config = "1.8.5"
aws-sdk-s3 = "1.103.0"
axum = "0.8.4"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
