[package]
name = "cas3"
edition = "2021"
version = "0.1.0"

[dependencies]
aws-config = "1.8.5"
aws-sdk-s3 = "1.103.0"
aws-smithy-types = "1.3"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
dotenv = "0.15.0"
futures-util = "0.3"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = "1.7"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
